--- a/Parsifal.Util/Parsifal.Util.csproj
+++ b/Parsifal.Util/Parsifal.Util.csproj
@@ -5,10 +5,10 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Product>Parsifal</Product>
     <PackageId>Parsifal.Util</PackageId>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
-    <PackageTags>CRC,Interop,Helper</PackageTags>
+    <Version>1.1.0</Version>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <PackageTags>Helper,CRC,Interop</PackageTags>
     <Authors>itachijames</Authors>
     <Company>itachijames</Company>
     <Description>实用功能库</Description>
