--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         uses: rohith/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: Parsifal.Util/Parsifal.Util.csproj
+          PROJECT_FILE_PATH: src/Parsifal.Util/Parsifal.Util.csproj
           
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: Parsifal.Util
