--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,4 +1,5 @@
 <Project>
+
 	<PropertyGroup>
 		<Product>Parsifal.Util</Product>
 		<Authors>itachijames</Authors>
@@ -9,7 +10,17 @@
 		<PackageProjectUrl>https://github.com/itachijames/Parsifal.Util</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/itachijames/Parsifal.Util.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<AssemblyVersion>$(Version)</AssemblyVersion>
-		<FileVersion>$(Version)</FileVersion>
 	</PropertyGroup>
+	
+	<PropertyGroup>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	</PropertyGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+	</ItemGroup>
+	
 </Project>
