--- a/src/Parsifal.Util/Parsifal.Util.csproj
+++ b/src/Parsifal.Util/Parsifal.Util.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
-    <Version>1.2.0</Version>
+    <TargetFrameworks>netstandard2.1;net5.0;net45</TargetFrameworks>
+    <Version>1.3.0</Version>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>Helper,CRC,Interop</PackageTags>
     <Description>实用功能库</Description>
