--- a/src/Parsifal.Util/Parsifal.Util.csproj
+++ b/src/Parsifal.Util/Parsifal.Util.csproj
@@ -1,13 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5.0;net45</TargetFrameworks>
-    <Version>1.4.0</Version>
+    <TargetFrameworks>netstandard2.1;net6.0;net45</TargetFrameworks>
+    <Version>1.5.0</Version>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>Helper,CRC,Interop</PackageTags>
     <Description>实用功能库</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+    <PackageReference Include="System.Security.Principal.Windows">
+      <Version>5.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PackageReference Include="System.Security.Principal.Windows">
+      <Version>5.0.0</Version>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
