--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,6 +10,7 @@
 		<PackageProjectUrl>https://github.com/itachijames/Parsifal.Util</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/itachijames/Parsifal.Util.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
+		<ErrorReport>none</ErrorReport>
 	</PropertyGroup>
 	
 	<PropertyGroup>
