--- a/src/Parsifal.Util/Parsifal.Util.csproj
+++ b/src/Parsifal.Util/Parsifal.Util.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net6.0;net45</TargetFrameworks>
-		<Version>1.6.0</Version>
+		<TargetFrameworks>net48;netstandard2.1;net6.0</TargetFrameworks>
+		<Version>1.7.0</Version>
 		<PackageId>$(AssemblyName)</PackageId>
 		<PackageTags>Helper,CRC,Interop</PackageTags>
 		<Description>实用功能库</Description>
@@ -11,15 +11,11 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-		<PackageReference Include="System.Security.Principal.Windows">
-			<Version>5.0.0</Version>
-		</PackageReference>
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="System.Security.Principal.Windows">
-			<Version>5.0.0</Version>
-		</PackageReference>
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
-
+	
 </Project>
