--- a/src/Parsifal.Util/Parsifal.Util.csproj
+++ b/src/Parsifal.Util/Parsifal.Util.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net48;netstandard2.1;net6.0</TargetFrameworks>
-		<Version>1.7.0</Version>
+		<TargetFrameworks>net45;netstandard2.1;net6.0</TargetFrameworks>
+		<Version>1.7.1</Version>
 		<PackageId>$(AssemblyName)</PackageId>
 		<PackageTags>Helper,CRC,Interop</PackageTags>
 		<Description>实用功能库</Description>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
+		<PackageReadmeFile>readme.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
@@ -17,5 +18,12 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
-	
+
+	<ItemGroup>
+		<None Include="..\..\readme.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
 </Project>
