--- a/src/Parsifal.Util/Parsifal.Util.csproj
+++ b/src/Parsifal.Util/Parsifal.Util.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net45;netstandard2.1;net6.0</TargetFrameworks>
-		<Version>1.7.1</Version>
+		<TargetFrameworks>net48;netstandard2.1;net6.0</TargetFrameworks>
+		<Version>1.7.2</Version>
 		<PackageId>$(AssemblyName)</PackageId>
 		<PackageTags>Helper,CRC,Interop</PackageTags>
 		<Description>实用功能库</Description>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
-		<PackageReadmeFile>readme.md</PackageReadmeFile>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
@@ -20,7 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\..\readme.md">
+		<None Include="..\..\README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
